@@ -142,7 +142,10 @@ def test_softmax_with_bias():
     TODO: check that we loop when their is too much thread.(THIS IS NOT IMPLEMENTED)
     """
     x = T.fmatrix('x')
-    z = T.nnet.softmax_with_bias(x, T.zeros_like(x[0,:]))
+    # We can't use zeros_like(x[0,::]) as this don't allow to test with
+    # 0 shape.
+    z = T.nnet.softmax_with_bias(x, T.alloc(numpy.asarray(0, dtype='float32'),
+                                            x.shape[1]))
 
     f = theano.function([x],z, mode=mode_without_gpu)
     f_gpu = theano.function([x],z, mode=mode_with_gpu)
@@ -165,6 +168,7 @@ def test_softmax_with_bias():
     #we need to test n>32*1024 to check that we make the block loop.
     cmp(2<<15, 5)
     cmp(4074, 400)
+    cmp(0, 10)
     cmp(4, 1000, True)
     cmp(4, 1024, True)
     cmp(4, 2000, True)
